--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "easymde": "^2.18.0",
     "lucide-react": "^0.468.0",
+    "markdown-it": "^14.1.0",
     "next": "^15.1.1-canary.20",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.29-canary.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-is": "^19.0.0",
     "sanity": "^3.68.3",
     "sanity-plugin-markdown": "^5.0.0",
     "server-only": "^0.0.1",
